// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Web ACL Rule Group default testing Web Acl Rule Group scope=global testing Should match snapshot: global 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "IpSet": {
      "Properties": {
        "Addresses": [
          "192.0.2.0/24",
          "198.51.100.0/24",
          "203.0.113.0/24",
        ],
        "IPAddressVersion": "IPV4",
        "Scope": "CLOUDFRONT",
      },
      "Type": "AWS::WAFv2::IPSet",
    },
    "WafIpRestrictRuleGroup": {
      "Properties": {
        "Capacity": 10,
        "CustomResponseBodies": {
          "ip-restrict": {
            "Content": "Sorry, You Are Not Allowed to Access This Service.",
            "ContentType": "TEXT_PLAIN",
          },
        },
        "Description": "ip restrict rule group",
        "Rules": [
          {
            "Action": {
              "Allow": {},
            },
            "Name": "allow-ip-rule",
            "Priority": 0,
            "Statement": {
              "IPSetReferenceStatement": {
                "Arn": {
                  "Fn::GetAtt": [
                    "IpSet",
                    "Arn",
                  ],
                },
              },
            },
            "VisibilityConfig": {
              "CloudWatchMetricsEnabled": true,
              "MetricName": "AllowIpRule",
              "SampledRequestsEnabled": true,
            },
          },
          {
            "Action": {
              "Block": {
                "CustomResponse": {
                  "CustomResponseBodyKey": "ip-restrict",
                  "ResponseCode": 403,
                },
              },
            },
            "Name": "deny-ip-rule",
            "Priority": 1,
            "Statement": {
              "NotStatement": {
                "Statement": {
                  "IPSetReferenceStatement": {
                    "Arn": {
                      "Fn::GetAtt": [
                        "IpSet",
                        "Arn",
                      ],
                    },
                  },
                },
              },
            },
            "VisibilityConfig": {
              "CloudWatchMetricsEnabled": true,
              "MetricName": "DenyIpRule",
              "SampledRequestsEnabled": true,
            },
          },
        ],
        "Scope": "CLOUDFRONT",
        "VisibilityConfig": {
          "CloudWatchMetricsEnabled": true,
          "MetricName": "IpRestrictRule",
          "SampledRequestsEnabled": true,
        },
      },
      "Type": "AWS::WAFv2::RuleGroup",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`Web ACL Rule Group default testing Web Acl Rule Group scope=regional testing Should match snapshot: regional 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "IpSet": {
      "Properties": {
        "Addresses": [
          "192.0.2.0/24",
          "198.51.100.0/24",
          "203.0.113.0/24",
        ],
        "IPAddressVersion": "IPV4",
        "Scope": "REGIONAL",
      },
      "Type": "AWS::WAFv2::IPSet",
    },
    "WafIpRestrictRuleGroup": {
      "Properties": {
        "Capacity": 10,
        "CustomResponseBodies": {
          "ip-restrict": {
            "Content": "Sorry, You Are Not Allowed to Access This Service.",
            "ContentType": "TEXT_PLAIN",
          },
        },
        "Description": "ip restrict rule group",
        "Name": "example-waf-ip-restrict-rule-group",
        "Rules": [
          {
            "Action": {
              "Allow": {},
            },
            "Name": "allow-ip-rule",
            "Priority": 0,
            "Statement": {
              "IPSetReferenceStatement": {
                "Arn": {
                  "Fn::GetAtt": [
                    "IpSet",
                    "Arn",
                  ],
                },
              },
            },
            "VisibilityConfig": {
              "CloudWatchMetricsEnabled": true,
              "MetricName": "AllowIpRule",
              "SampledRequestsEnabled": true,
            },
          },
          {
            "Action": {
              "Block": {
                "CustomResponse": {
                  "CustomResponseBodyKey": "ip-restrict",
                  "ResponseCode": 403,
                },
              },
            },
            "Name": "deny-ip-rule",
            "Priority": 1,
            "Statement": {
              "NotStatement": {
                "Statement": {
                  "IPSetReferenceStatement": {
                    "Arn": {
                      "Fn::GetAtt": [
                        "IpSet",
                        "Arn",
                      ],
                    },
                  },
                },
              },
            },
            "VisibilityConfig": {
              "CloudWatchMetricsEnabled": true,
              "MetricName": "DenyIpRule",
              "SampledRequestsEnabled": true,
            },
          },
        ],
        "Scope": "REGIONAL",
        "VisibilityConfig": {
          "CloudWatchMetricsEnabled": true,
          "MetricName": "IpRestrictRule",
          "SampledRequestsEnabled": true,
        },
      },
      "Type": "AWS::WAFv2::RuleGroup",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
